alarm works, implementing the actual sound part and music picking

--- a/app/src/main/res/layout/fragment_song_picker.xml
+++ b/app/src/main/res/layout/fragment_song_picker.xml
@@ -4,19 +4,13 @@
     android:layout_height="match_parent"
     tools:context="com.bjennings.spotifyalarm.SongPickerFragment">
 
-     <!-- TODO: Update blank fragment layout -->
+     <android.support.v7.widget.SearchView
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:id="@+id/search_box"
+         android:iconifiedByDefault="false"/>
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/song_picker_title"
-            android:id="@+id/title"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="0dp"
-            android:gravity="center" />
-
-        <LinearLayout
+    <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
