--- a/app/src/main/res/layout/content_create_alarm.xml
+++ b/app/src/main/res/layout/content_create_alarm.xml
@@ -8,16 +8,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_create_alarm">
 
-
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:id="@+id/scrollView" >
-
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal">
 
             <TimePicker
                 android:layout_width="wrap_content"
@@ -26,7 +21,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -38,17 +33,16 @@
                 <Button
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="Save"
+                    android:text="@string/save_btn"
                     android:id="@+id/save_btn"
                     android:layout_marginRight="25dp" />
 
                 <Button
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:text="Cancel"
+                    android:text="@string/cancel_btn"
                     android:id="@+id/cancel_btn" />
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
 
 </RelativeLayout>
