--- a/app/src/main/res/layout/content_create_alarm.xml
+++ b/app/src/main/res/layout/content_create_alarm.xml
@@ -18,10 +18,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/timePicker"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:paddingBottom="15dp" />
+
+            <include layout="@layout/track_layout" />
 
             <LinearLayout
                 android:orientation="horizontal"
