--- a/app/src/main/res/layout/track_layout.xml
+++ b/app/src/main/res/layout/track_layout.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingTop="15dp">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+        android:id="@+id/music_note"
         android:src="@drawable/ic_music_note"
         android:paddingRight="5dp"
         android:paddingLeft="5dp" />
