alarm working, playing a song at full volume. you just can't pick the song. alarms reset after boot, and set for the next day. no picking days it should go off.

--- a/app/src/main/res/layout/content_create_alarm.xml
+++ b/app/src/main/res/layout/content_create_alarm.xml
@@ -21,7 +21,8 @@
                 android:layout_gravity="center"
                 android:paddingBottom="15dp" />
 
-            <include layout="@layout/track_layout" />
+            <include layout="@layout/track_layout"
+                android:id="@+id/song_picker" />
 
             <LinearLayout
                 android:orientation="horizontal"
